fix overflow

--- a/src/sentry/static/sentry/less/shared-components.less
+++ b/src/sentry/static/sentry/less/shared-components.less
@@ -2736,6 +2736,12 @@ ul.radio-inputs {
   }
 }
 
+.custom-resolution-modal {
+  .modal-content {
+    overflow: visible;
+  }
+}
+
 // Sudo Modal
 .sudo-modal.modal {
   .modal-header {
